force-app/main/default/objects/Vehicle_Maintenance__c/Vehicle_Maintenance__c.object-meta.xml
<CustomObject>
    <label>Vehicle Maintenance</label>
    <nameField>
        <displayFormat>VM-{00000}</displayFormat>
        <label>Vehicle Maintenance Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Maintenances</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>