force-app/main/default/objects/Vehicle_Maintenance__c/fields/Cleaning_Record__c.field-meta.xml
<CustomField>
    <fullName>Cleaning_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cleaning Record</label>
    <referenceTo>Cleaning_Record__c</referenceTo>
    <relationshipLabel>Vehicle Maintenances</relationshipLabel>
    <relationshipName>Vehicle_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>