force-app/main/default/objects/Vehicle_Maintenance__c/fields/Fuel_Expense__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Expense__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fuel Expense</label>
    <referenceTo>Fuel_Expense__c</referenceTo>
    <relationshipLabel>Vehicle Maintenances</relationshipLabel>
    <relationshipName>Vehicle_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>