force-app/main/default/objects/Vehicle_Maintenance__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fuel Expense</fullName>
            </value>
            <value>
                <fullName>Spare parts and Oil</fullName>
            </value>
            <value>
                <fullName>Cleaning Record</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>