force-app/main/default/objects/Vehicle_Maintenance__c/fields/Spare_Parts_Used__c.field-meta.xml
<CustomField>
    <fullName>Spare_Parts_Used__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Spare Parts Used</label>
    <referenceTo>Spare_Part__c</referenceTo>
    <relationshipLabel>Vehicle Maintenances</relationshipLabel>
    <relationshipName>Vehicle_Maintenances</relationshipName>
    <type>Lookup</type>
</CustomField>