force-app/main/default/objects/Vehicle_Maintenance__c/fields/Vehicle_Number__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Number__c</fullName>
    <label>Vehicle Number</label>
    <referenceTo>Vehicle__c</referenceTo>
    <relationshipLabel>Vehicle Maintenances</relationshipLabel>
    <relationshipName>Vehicle_Maintenances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>