force-app/main/default/objects/Vehicle_Maintenance__c/recordTypes/Expense_Type.recordType-meta.xml
<RecordType>
    <fullName>Expense_Type</fullName>
    <active>true</active>
    <label>Expense Type</label>
</RecordType>